--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Document</title>
+        <link href="resources/css/index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <div id="Above-the-fold">
-            <h1>Take Care of Yourself, We'll Help</h1>    
-            <p></p>
-        </div>
+        <header>
+            <nav></nav>
+            <main class="header">
+                <h1>Know How You Look Before You Get A Haircut</h1>
+                <p>Now you never have to wonder which style is best for you</p>
+            </main>
+        </header>
+    
         <div id="Problem">
             <h2>Tried of Not Getting the Service You Want</h2>
             <p>
@@ -26,5 +31,8 @@
         <div id="How-it-works">
             <h2>How It Works</h2>
         </div>
+        <footer>
+            
+        </footer>
     </body>
 </html>
