Add colour to text and alignment

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
         <header>
             <nav></nav>
             <main class="header">
-                <h1>Know How You Look Before You Get A Haircut</h1>
-                <p>Now you never have to wonder which style is best for you</p>
+                <h1>Take the Guess Work Out of Looking Good</h1>
+                <p>Pick the right hairstyle. Find a great stylist. Look your best</p>
             </main>
         </header>
     
         <div id="Problem">
-            <h2>Tried of Not Getting the Service You Want</h2>
+            <h2>Tried of Having to Guess the Right Style for You?</h2>
             <p>
 
             </p>
         </div>
         <div id="Success">
-            <h2>Let's Help You Look Your Best</h2>
+            <h2>Now You Can Always Look Your Best</h2>
         </div>
         <div id="Guide">
 
@@ -32,7 +32,7 @@
             <h2>How It Works</h2>
         </div>
         <footer>
-            
+
         </footer>
     </body>
 </html>
