style index page, and add about html and css

--- a/index.html
+++ b/index.html
@@ -8,31 +8,44 @@
         <link href="resources/css/index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <nav></nav>
-            <main class="header">
-                <h1>Take the Guess Work Out of Looking Good</h1>
-                <p>Pick the right hairstyle. Find a great stylist. Look your best</p>
+        <header id="header">
+            <nav>
+                <ul>
+                    <li>LOGO</li>
+                </ul>
+            </nav>
+            <main class="above-the-fold">
+                <div>
+                    <h1>Take the Guess Work Out of Looking Good</h1>
+                    <p>Pick the right hairstyle. Find a great stylist. Look your best</p>
+                    <button class="cta-main">Start Looking Great</button>
+                </div>
             </main>
         </header>
     
-        <div id="Problem">
+        <div id="problem" class="below-the-fold">
             <h2>Tried of Having to Guess the Right Style for You?</h2>
+            <button class="cta-main">Start Looking Great</button>
             <p>
 
             </p>
         </div>
-        <div id="Success">
+        <div id="success" class="below-the-fold">
             <h2>Now You Can Always Look Your Best</h2>
+            <button class="cta-main">Start Looking Great</button>
         </div>
-        <div id="Guide">
-
+        <div id="guide" class="below-the-fold">
+            <h2>Introducing the Worlds First Advanced Hairstyling AI</h2>
+            <button class="cta-main">Start Looking Great</button>
         </div>
-        <div id="How-it-works">
+        <div id="how-it-works" class="below-the-fold">
             <h2>How It Works</h2>
+            <button class="cta-main">Start Looking Great</button>
         </div>
         <footer>
-
+            <ul>
+                <li> Junk Drawer</li>
+            </ul>
         </footer>
     </body>
 </html>
