update html and css for index and about pages

--- a/about.html
+++ b/about.html
@@ -7,6 +7,37 @@
         <link href="resources/css/about.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1>This is the about page</h1>
+        <header id="header">
+            <nav>
+                <ul>
+                    <li class="logo">LOGO</li>
+                    <li>About</li>
+                    <span>
+                        <button>Become a Total Care Pro</button>
+                        <button>Persoanlise Your Hairstyle</button>
+                    </span>
+                </ul>
+            </nav>
+            <main class="above-the-fold">
+                <div>
+                    <h1>A Styling Assistant to Help You Look And Feel Your Best</h1>
+                    <p>Take the guess work out of looking good, so you can focus on things that matter</p>
+                    <button class="cta-main">Start Looking Great</button>
+                </div>
+            </main>
+        </header>
+        <div>
+            <div>
+                <h2>Reviews/Brand Message</h2>
+            </div>
+            <div>
+                <h2>Insert Image Here</h2>
+            </div>
+        </div>
+        <footer>
+            <ul>
+                <li> Junk Drawer</li>
+            </ul>
+        </footer>
     </body>
 </html>
