--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
         <header id="header">
             <nav>
                 <ul>
-                    <li>LOGO</li>
+                    <li class="logo">LOGO</li>
+                    <li>About</li>
+                    <span>
+                        <button>Become a Total Care Pro</button>
+                        <button>Persoanlise Your Hairstyle</button>
+                    </span>
                 </ul>
             </nav>
             <main class="above-the-fold">
@@ -39,8 +44,26 @@
             <button class="cta-main">Start Looking Great</button>
         </div>
         <div id="how-it-works" class="below-the-fold">
-            <h2>How It Works</h2>
-            <button class="cta-main">Start Looking Great</button>
+            <div>
+                <h2>How It Works</h2>
+            </div>
+           <div class="steps">
+                <div class="">
+                    <img>
+                    <h3>Choose the right hairstyle</h3>
+                </div>
+                <div>
+                    <img>
+                    <h3>Choose the right hairstyle</h3>
+                </div>
+                <div>
+                    <img>
+                    <h3>Choose the right hairstyle</h3>
+                </div>
+           </div>
+           <div>
+                <button class="cta-main">Start Looking Great</button>
+           </div>
         </div>
         <footer>
             <ul>
