--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header id="header">
             <nav>
                 <ul>
-                    <li class="logo">LOGO</li>
+                    <li class="logo"><img alt="Total Care" src="resources/images/Screen Shot 2020-01-27 at 2.58.59 pm.png" style="width:82px"></li>
                     <li>About</li>
                     <span>
                         <button>Become a Total Care Pro</button>
@@ -23,17 +23,26 @@
                 <div>
                     <h1>Take the Guess Work Out of Looking Good</h1>
                     <p>Pick the right hairstyle. Find a great stylist. Look your best</p>
-                    <button class="cta-main">Start Looking Great</button>
+                    <button id="first-button" class="cta-main">Start Looking Great</button>
                 </div>
             </main>
+            <div>
+                <video width="425" class="header-image"  autoplay muted loop><source src="resources/videos/vertical-demo.mp4" type="video/mp4"> Your browser does not support the video tag</video class="header-image">
+            </div>
         </header>
     
         <div id="problem" class="below-the-fold">
-            <h2>Tried of Having to Guess the Right Style for You?</h2>
-            <button class="cta-main">Start Looking Great</button>
-            <p>
+            <div>
+                <h2>Tired of Having to Guess the Right Style for You?</h2>
+            </div>
+            <div>
+                <img id="problem-image" alt="picture of lady with bad hair" src="resources/images/gettyimages-520953789-1024x1024.jpg" style="width:700px">
+                <p>
 
-            </p>
+                </p>
+            </div>
+            
+            <button class="cta-main">Start Looking Great</button>
         </div>
         <div id="success" class="below-the-fold">
             <h2>Now You Can Always Look Your Best</h2>
@@ -70,5 +79,7 @@
                 <li> Junk Drawer</li>
             </ul>
         </footer>
+        <script src="./resources/javascript/index.js" type="text/javascript"></script>
     </body>
+
 </html>
