--- a/project/html/pages/signup.html
+++ b/project/html/pages/signup.html
@@ -6,7 +6,7 @@
         <title>Document</title>
         <link href="./css/signup.css" type="text/css" rel="stylesheet">
     </head>
-    <body>
+    <body class="bg-gra-01">
         <header id="header">
             <nav>
                 <ul>
@@ -18,53 +18,33 @@
                     </span>
                 </ul>
             </nav>
-            
-        <!-- Sign up form -->
-        <section class="signup">
-            <div class="container">
-                <div class="signup-content">
-                    <div class="signup-form">
-                        <h2 class="form-title">Sign up</h2>
-                        <form method="POST" class="register-form" id="register-form">
-                            <div class="form-group">
-                                <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Your Name"/>
-                            </div>
-                            <div class="form-group">
-                                <label for="email"><i class="zmdi zmdi-email"></i></label>
-                                <input type="email" name="email" id="email" placeholder="Your Email"/>
-                            </div>
-                            <div class="form-group">
-                                <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="pass" id="pass" placeholder="Password"/>
-                            </div>
-                            <div class="form-group">
-                                <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password"/>
-                            </div>
-                            <div class="form-group">
-                                <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
-                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
-                            </div>
-                            <div class="form-group form-button">
-                                <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="signup-image">
-                        <figure><img src="images/signup-image.jpg" alt="sing up image"></figure>
-                        <a href="#" class="signup-image-link">I am already member</a>
-                    </div>
+            <div>
+                <div>
+                    <img>
                 </div>
+                <div>
+                    <form method="POST">
+                        <input type="text" name="First Name" placeholder="First Name">
+                        <input type="text" name="Last Name" placeholder="Last Name">
+                        <br>
+                        <input type="text" name="Email placeholder="john@example.com">
+                        <input type="text" name="Phone Number" placeholder="Phone Number">
+                        <br>
+                        <input type="text" name="Address" placeholder="Your Address">
+                        <br>
+                        <input type="password" name="Password" placeholder="Password">
+                        <br>
+                        <button type="submit">Submit</button> 
+                    </form>
+                </div>
+                <button onclick="handleSignIn()">Signup with Google</button>
             </div>
-        </section>
-
         <footer>
             <ul>
                 <li> Junk Drawer</li>
             </ul>
         </footer>
-        <script src="./javascript/index.js" type="text/javascript"></script>
+        <script src="./javascript/signup.js" type="text/javascript"></script>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
         <script src="https://www.gstatic.com/firebasejs/7.9.2/firebase-app.js"></script>
 
